Testing different organization.

--- a/windows/views/broadcastWindow.html
+++ b/windows/views/broadcastWindow.html
@@ -5,7 +5,7 @@
     <script>
             if (typeof module === 'object') {window.module = module; module = undefined;}
     </script>
-    <script src="./node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
 </head>
 <body>
     <p>Stream is active.</p>
@@ -24,6 +24,7 @@
             ipcRenderer.send('stream:stop');
         }
         
+        // TODO: Replace this:
         function checkServerCalls() {
             ipcRenderer.on("request", function (event, req, port) {
                 var doc = document.implementation.createHTMLDocument(req.url);
