--- a/windows/views/startWindow.html
+++ b/windows/views/startWindow.html
@@ -5,8 +5,8 @@
         <script>
             if (typeof module === 'object') {window.module = module; module = undefined;}
         </script>
-        <script src="./node_modules/jquery/dist/jquery.slim.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="./public/styles/startWindow.css" />
+        <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="../../public/styles/startWindow.css" />
     </head>
     <body>
         <div class="main-menu-container">
