--- a/windows/views/streamWindow.html
+++ b/windows/views/streamWindow.html
@@ -5,9 +5,9 @@
         <script>
             if (typeof module === 'object') {window.module = module; module = undefined;}
         </script>
-        <script src="./node_modules/jquery/dist/jquery.slim.min.js"></script>
-        <script src="./public/javascript/controller.js"></script>
-        <script src="./public/javascript/stream.js"></script>
+        <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
+        <script src="../../public/javascript/controller.js"></script>
+        <script src="../../public/javascript/stream.js"></script>
     </head>
     <body>
         <video id="stream-video" style="background-color: grey; border: 2px solid black;" width="1280" height="720" />
