--- a/windows/views/startWindow.html
+++ b/windows/views/startWindow.html
@@ -11,24 +11,43 @@
     <body>
         <div class="main-menu-container">
             <div class="menu-buttons-container">
-                <div id="join-stream-form" class="join-form">
-                    <form id="join-form">
-                        <div class="input-group">
-                            <label>
-                                IP Address:
-                            </label>
-                            <input type="text" id="ip" autofocus required />
-                        </div>
-                    </form>
-                    <button type="submit" form="join-form">Join stream</button>
-                </div>
-                <button id="start-stream">Start stream</button>
+                <table class="menu-table">
+                    <tbody>
+                        <tr>
+                            <td>
+                                <form id="join-stream-form">
+                                    <div class="input-group">
+                                        <label>
+                                            <b>IP Address:</b>
+                                        </label>
+                                        <input type="text" id="ip" autofocus required />
+                                    </div>
+                                </form>
+                            </td>
+                            <td>
+                                <b>Select a window:</b>
+                                <form id="select-window-form">
+                                    <div id="window-option-list" class="input-group">
+                                    </div>
+                                </form>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <button type="submit" form="join-form">Join stream</button>
+                            </td>
+                            <td>
+                                <button id="start-stream" type="submit" form="select-window-form">Start stream</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
         
         <script>
             const electron = require('electron');
-            const { ipcRenderer } = electron;
+            const { ipcRenderer, desktopCapturer } = electron;
 
             $(document).ready(function () {
                 window.addEventListener("gamepadconnected", function (e) {
@@ -37,12 +56,25 @@
                         e.gamepad.buttons.length, e.gamepad.axes.length);
                 });
 
-                $('#join-stream').on('click', function () {
-                    $('#join-stream-form').toggle();
+                desktopCapturer.getSources({types: ['window', 'screen']}, function(err, sources) {
+                    const windSelectionGroup = $('#window-option-list');
+                    var checked = false;
+                    sources.forEach(source => {
+                        let inputEl = $('<input>');
+                        if(!checked) {inputEl.prop('checked', true); checked=true;}
+
+                        windSelectionGroup.append(
+                            $('<div>').append(
+                                inputEl.attr('id', source.id).attr('name', 'window-options').attr('type', 'radio').attr('value', source.id)
+                            ).append(
+                                $('<label>').attr('for', source.id).text(source.name)
+                            )
+                        )
+                    });
                 });
 
-                $('form').on('submit', joinStream);
-                $('#start-stream').on('click', startStream)
+                $('#join-stream-form').on('submit', joinStream);
+                $('#select-window-form').on('submit', startStream)
             });
 
             function joinStream(e) {
@@ -54,8 +86,12 @@
 
             function startStream(e) {
                 e.preventDefault();
-                ipcRenderer.send('stream:start');
+
+                const windowId = $('input[name="window-options"]:checked').val();
+                ipcRenderer.send('stream:start', windowId);
             }
+
+
         </script>
     </body>
 </html>
