--- a/windows/views/broadcastWindow.html
+++ b/windows/views/broadcastWindow.html
@@ -78,6 +78,7 @@
 
                 // TODO: Next I need to send buffer to server
                 setInterval(() => {
+                    console.log('Stream interval send')
                     const canvas = document.createElement('canvas');
                     canvas.getContext('2d').drawImage(video, 0, 0, 800, 800);
                     canvas.toBlob(blob => {
