--- a/windows/views/broadcastWindow.html
+++ b/windows/views/broadcastWindow.html
@@ -75,7 +75,7 @@
             // This could be too slow. Need to test.
             video.onloadedmetadata = () => {
                 video.play();
-                var mediaRecorder = new mediaRecorder(stream, {mimeType : 'video/mp4'});
+                var mediaRecorder = new MediaRecorder(stream, {mimeType : 'video/mp4'});
                 
                 // Trying a different method using mediaRecorder instead of canvas
                 mediaRecorder.ondataavailable = function (e) {
