--- a/windows/views/streamWindow.html
+++ b/windows/views/streamWindow.html
@@ -8,84 +8,11 @@
     </script>
     <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="../../public/javascript/gamepad.js"></script>
-    <!-- <script src="../../public/javascript/stream.js"></script> -->
+    <script src="../../public/javascript/stream.js"></script>
 </head>
 
 <body>
-    <video id="stream-video" style="background-color: grey; border: 2px solid black;" width="1280" height="720" ></video>
-
-
-    <script type="text/javascript">
-        const electron = require('electron');
-        const { ipcRenderer } = electron;
-
-        var playStream = true;
-        const videoTag = document.querySelector('video');
-        const streamMediaSource = new MediaSource();
-        
-        const url = URL.createObjectURL(streamMediaSource);
-        videoTag.src = url;
-        streamMediaSource.addEventListener('sourceopen', callback);
-
-        function callback(e) {
-            console.log('source opened')
-            const audioSourceBuffer = streamMediaSource
-                .addSourceBuffer('audio/mp4; codecs="mp4a.40.2"');
-            const videoSourceBuffer = streamMediaSource
-                .addSourceBuffer('video/webm;codecs="vp9"'); //  codecs="vp8"
-
-            //callFetchAudioSegment(callFetchAudioSegment);
-            //callFetchVideoSegment(callFetchVideoSegment);
-
-            ipcRenderer.on('streamEnded', function () {
-                console.log('Stream has ended.');
-            })
-
-            // Is it okay that the client is continously receiving the stream rather than requesting?
-            ipcRenderer.on('videoStream', function (event, buffer) {
-                if(Object.prototype.toString.call(buffer) === "[object Uint8Array]") {
-                    // Buffer parameter is a uint8array
-                    videoSourceBuffer.appendBuffer(buffer.buffer);
-                }
-            });
-
-
-            // I think I can remove all this? Unless the current situation is not working.
-            function fetchSegment(url) {
-                return fetch(url).then(function (response) {
-                    return response.arrayBuffer();
-                });
-            }
-
-            function callFetchAudioSegment(cb) {
-                fetchSegment("http://localhost:4000/audio")
-                    .then(function (audioSegment) {
-                        audioSourceBuffer.appendBuffer(audioSegment)
-                    })
-                    .then(function () {
-                        if (playStream) {
-                            return cb(callFetchAudioSegment);
-                        } else {
-                            return;
-                        }
-                    })
-            }
-
-            function callFetchVideoSegment(cb) {
-                fetchSegment("http://localhost:4000/video")
-                    .then(function (videoSegment) {
-                        videoSourceBuffer.appendBuffer(videoSegment)
-                    })
-                    .then(function () {
-                        if (playStream) {
-                            return cb(callFetchVideoSegment);
-                        } else {
-                            return;
-                        }
-                    })
-            }
-        }
-    </script>
+    <video id="stream-video" style="background-color: grey; border: 2px solid black;" width="1280" height="720" muted="muted"></video>
 </body>
 
 </html>
