--- a/windows/views/streamWindow.html
+++ b/windows/views/streamWindow.html
@@ -7,6 +7,7 @@
         if (typeof module === 'object') { window.module = module; module = undefined; }
     </script>
     <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
     <script src="../../public/javascript/gamepad.js"></script>
     <script src="../../public/javascript/stream4.js"></script>
 </head>
