Added autoplay to video tag. Not sure if it will help reduce lag for the stream viewer.

--- a/windows/views/streamWindow.html
+++ b/windows/views/streamWindow.html
@@ -16,14 +16,14 @@
 
 <body>
     <div class="video-container">
-        <video id="stream-video" muted="muted"></video>
+        <video id="stream-video" muted="muted" autoplay></video>
         <div class="menu-container">
             <button class="exit-button">Disconnect</button>
             <div class="button-divider"></div>
         </div>
         <!-- width="1280" height="720" -->
     </div>
-    
+
 </body>
 
 </html>
