--- a/windows/views/streamWindow.html
+++ b/windows/views/streamWindow.html
@@ -21,6 +21,20 @@
             <button class="exit-button">Disconnect</button>
             <div class="button-divider"></div>
         </div>
+        <div id="stat-console" class="side-console">
+            <div id="receiverStatsDiv">
+
+            </div>
+            <div id="bitrateDiv">
+
+            </div>
+            <div id="peerDiv">
+
+            </div>
+            <div id="receiverVideoStatsDiv">
+
+            </div>
+        </div>
         <!-- width="1280" height="720" -->
     </div>
 
